applications/CoSimulationApplication/custom_external_libraries/CoSimIO/co_sim_io/c/co_sim_io_c_info.h

typedef struct CoSimIO_Info
{
    void* PtrCppInfo;
} CoSimIO_Info;
const char* CoSimIO_Info_GetString(const CoSimIO_Info I_Info, const char* I_Key);