applications/CoSimulationApplication/custom_external_libraries/CoSimIO/co_sim_io/fortran/co_sim_io.f90

      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_ModelPart_GetGhostNodeByIndex (I_ModelPart,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_GetGhostNodeByIndex")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
                  INTEGER , VALUE                                               :: I_Index
              END FUNCTION CoSimIO_ModelPart_GetGhostNodeByIndex
      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_ModelPart_GetNodeById (I_ModelPart,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_GetNodeById")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
                  INTEGER , VALUE                                               :: I_Index
              END FUNCTION CoSimIO_ModelPart_GetNodeById
      
              TYPE(CoSimIO_Element) FUNCTION CoSimIO_ModelPart_GetElementByIndex (I_ModelPart,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_GetElementByIndex")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Element, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                              :: I_ModelPart
                  INTEGER , VALUE                                             :: I_Index
              END FUNCTION CoSimIO_ModelPart_GetElementByIndex
      
              TYPE(CoSimIO_Element) FUNCTION CoSimIO_ModelPart_GetElementById (I_ModelPart,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_GetElementById")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Element, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                              :: I_ModelPart
                  INTEGER , VALUE                                             :: I_Index
              END FUNCTION CoSimIO_ModelPart_GetElementById
            
            
              SUBROUTINE CoSimIO_ModelPart_Clear(I_ModelPart) BIND(C, NAME='CoSimIO_ModelPart_Clear')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), INTENT(IN) , VALUE          :: I_ModelPart          
              END SUBROUTINE CoSimIO_ModelPart_Clear
      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_ModelPart_CreateNewNode (I_ModelPart,I_Id,I_X,I_Y,I_Z) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_CreateNewNode")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                         :: I_ModelPart
                  INTEGER , VALUE                                                        :: I_Id
                  REAL(kind=c_double), VALUE                                             :: I_X
                  REAL(kind=c_double), VALUE                                             :: I_Y
                  REAL(kind=c_double), VALUE                                             :: I_Z
              END FUNCTION CoSimIO_ModelPart_CreateNewNode
      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_ModelPart_CreateNewGhostNode (I_ModelPart,I_Id,I_X,I_Y,I_Z,PartitionIndex) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_CreateNewGhostNode")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                             :: I_ModelPart
                  INTEGER , VALUE                                            :: I_Id
                  REAL(kind=c_double), VALUE                                 :: I_X
                  REAL(kind=c_double), VALUE                                 :: I_Y
                  REAL(kind=c_double), VALUE                                 :: I_Z
                  INTEGER , VALUE                                            :: PartitionIndex
              END FUNCTION CoSimIO_ModelPart_CreateNewGhostNode
      
              TYPE(CoSimIO_Element) FUNCTION CoSimIO_ModelPart_CreateNewElement (I_ModelPart,I_Id, I_Type, I_Connectivities) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_CreateNewElement")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Element, CoSimIO_ModelPart, CoSimIO_ElementType
                  TYPE(CoSimIO_ModelPart), VALUE                             :: I_ModelPart
                  INTEGER , VALUE                                            :: I_Id
                  INTEGER(KIND(CoSimIO_ElementType)), VALUE                  :: I_Type
                  INTEGER(KIND=c_int),DIMENSION(*)                           :: I_Connectivities
              END FUNCTION CoSimIO_ModelPart_CreateNewElement
      
      
      
  
      ! END : co_sim_io_c_model_part.h interface 
      

      
      END INTERFACE
      
      CONTAINS
      
        FUNCTION CoSimIO_Info_GetString_Wrapper(I_Info, I_Key) RESULT(f_string)
        
            USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_ptr,c_f_pointer,c_char,c_null_char
            
            TYPE(CoSimIO_Info), VALUE                                   :: I_Info
            CHARACTER(LEN = 1, KIND=c_char), DIMENSION(*)               :: I_Key
            TYPE(c_ptr)                                                 :: c_string_pointer
            CHARACTER(len=:), ALLOCATABLE                               :: f_string
            CHARACTER(kind=c_char), DIMENSION(:), POINTER               :: char_pointer => null()
            CHARACTER(len=255)                                          :: temp_string
            INTEGER                                                     :: i,length
            
            IF (ALLOCATED(f_string)) DEALLOCATE (f_string)
            
            c_string_pointer = CoSimIO_Info_GetString(I_Info, I_Key)
            
            CALL c_f_pointer(c_string_pointer,char_pointer,[255])

            temp_string = " "
            DO i=1,255
              IF (char_pointer(i)==c_null_char) THEN
                length=i-1;EXIT
              END IF
              temp_string(i:i)=char_pointer(i)
            END DO
            
            ALLOCATE(CHARACTER(len=length)::f_string)
            f_string = TRIM(temp_string(1:length))//ACHAR(0)
        END FUNCTION CoSimIO_Info_GetString_Wrapper
        
      
        FUNCTION CoSimIO_ModelPart_Name_Wrapper(I_ModelPart) RESULT(f_string)
        
            USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_ptr,c_f_pointer,c_char,c_null_char
            
            TYPE(CoSimIO_ModelPart), VALUE                              :: I_ModelPart
            TYPE(c_ptr)                                                 :: c_string_pointer
            CHARACTER(len=:), ALLOCATABLE                               :: f_string
            CHARACTER(kind=c_char), DIMENSION(:), POINTER               :: char_pointer => null()
            CHARACTER(len=255)                                          :: temp_string
            INTEGER                                                     :: i,length
            
            IF (ALLOCATED(f_string)) DEALLOCATE (f_string)
            
            c_string_pointer = CoSimIO_ModelPart_Name (I_ModelPart)
            
            CALL c_f_pointer(c_string_pointer,char_pointer,[255])

            temp_string = " "
            DO i=1,255
              IF (char_pointer(i)==c_null_char) THEN
                length=i-1;EXIT
              END IF
              temp_string(i:i)=char_pointer(i)
            END DO
            
            ALLOCATE(CHARACTER(len=length)::f_string)
            f_string = TRIM(temp_string(1:length))//ACHAR(0)
            
        END FUNCTION CoSimIO_ModelPart_Name_Wrapper
      
      END MODULE co_sim_io